--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
     <title>WebStudio</title>
 </head>
@@ -16,21 +19,22 @@
     <!--Шапка сайта-->
     <header class="header">
         <!--Навигация на другие страницы-->
-        <nav class="header-nav">
-            <a class="link header-logo" href=""><span class="web">Web</span>Studio</a>
-            <ul class="list header-list">
-                <li><a class="link header-item current" href="">Студия</a></li>
-                <li><a class="link header-item" href="./portfolio.html">Портфолио</a></li>
-                <li><a class="link header-item" href="">Контакты</a></li>
-            </ul>
-        </nav>
+        <div class="container header-container">        
+            <nav class="header-nav">
+                <a class="link header-logo" href=""><span class="web">Web</span>Studio</a>
+                <ul class="list header-list">
+                    <li><a class="link header-item current" href="">Студия</a></li>
+                    <li><a class="link header-item" href="./portfolio.html">Портфолио</a></li>
+                    <li><a class="link header-item" href="">Контакты</a></li>
+                </ul>
+            </nav>
 
         <!--Ссылки на почту и телефон-->
-        <ul class="list header-contacts">
-            <li><a class="link header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a class="link header-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
-                
+            <ul class="list header-contacts">
+                <li><a class="link header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a class="link header-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            </ul>
+        </div>
     </header>
 
     <!--Уникальный контент сайта-->
@@ -38,13 +42,16 @@
 
         <!--Блок с заказом услуги-->
         <section class="hero">
+            <div class="container">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
             <button class="hero-btn" type="button">Заказать услугу</button>
+            </div>
         </section>
 
         <!--Блок с нашими преимуществами-->
         <section class="benefits">
-            <h2 class="benefits-title">Наши преимущества</h2>
+            <div class="container">
+            <h2 class="benefits-title visually-hidden">Наши преимущества</h2>
             <ul class="list benefits-list">
                 <li class="benefits-item">
                     <h3 class="benefits-item-title">Внимание к деталям</h3>
@@ -63,10 +70,12 @@
                     <p class="benefits-item-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
+            </div>
         </section>
 
         <!--Чем мы занимаемся-->
         <section class="works">
+            <div class="container">
             <h2 class="works-tile">Чем мы занимаемся</h2>
             <ul class="list works-list">
                 <li class="works-item">
@@ -79,39 +88,43 @@
                     <img src="./images/box3.jpg" alt="Руки с планшетом и ручкой" width="370">
                 </li>
             </ul>
+            </div>
         </section>
 
         <!--Команда-->
         <section class="team">
+            <div class="container">
             <h2 class="team-title">Наша команда</h2>
             <ul class="list team-list">
                 <li class="team-item">
-                    <img src="./images/person1.jpg" alt="Игорь Демьяненко" width="270">
+                    <img class="team-item-image" src="./images/person1.jpg" alt="Игорь Демьяненко" width="270">
                     <h3 class="team-item-title">Игорь Демьяненко</h3>
                     <p class="team-item-text" lang="en">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/person2.jpg" alt="Ольга Репина" width="270">
+                    <img class="team-item-image" src="./images/person2.jpg" alt="Ольга Репина" width="270">
                     <h3 class="team-item-title">Ольга Репина</h3>
                     <p class="team-item-text" lang="en">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/person3.jpg" alt="Николай Тарасов" width="270">
+                    <img class="team-item-image" src="./images/person3.jpg" alt="Николай Тарасов" width="270">
                     <h3 class="team-item-title">Николай Тарасов</h3>
                     <p class="team-item-text" lang="en">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/person4.jpg" alt="Михаил Ермаков" width="270">
+                    <img class="team-item-image" src="./images/person4.jpg" alt="Михаил Ермаков" width="270">
                     <h3 class="team-item-title">Михаил Ермаков</h3>
                     <p class="team-item-text" lang="en">UI Designer</p>
                 </li>
             </ul>
+            </div>
         </section>
     </main>
 
     <!--Подвал-->
     <footer class="footer">
         <!--Логотип-->
+        <div class="container">
         <a class="link footer-logo" href=""><span class="web">Web</span>Studio</a>
          <address>
             <ul class="list footer-list">
@@ -120,6 +133,7 @@
                 <li><a class="link footer-tel" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>             
          </address>
+        </div>
     </footer>
     
 </body>
