--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
     <title>Portfolio</title>
 </head>
@@ -16,6 +19,7 @@
     <!--Шапка сайта-->
     <header class="header">
         <!--Навигация на другие страницы-->
+        <div class="container">
         <nav class="header-nav">
             <a class="link header-logo" href=""><span class="web">Web</span>Studio</a>
             <ul class="list header-list">
@@ -30,7 +34,7 @@
             <li><a class="link header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a class="link header-tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
-    
+        </div>
     </header>
 
     <!--Уникальный контент сайта-->
@@ -38,7 +42,8 @@
 
     <!--Навигация по портфолио-->
     <section class="nav-portfolio">
-        <h1 class="nav-portfolio-title">Навигация кнопоками примеров работ</h2>
+        <div class="container">
+        <h1 class="nav-portfolio-title visually-hidden">Навигация кнопоками примеров работ</h2>
         <!--Кнопки-->
         <ul class="list nav-portfolio-list">
             <li class="nav-portfolio-item">
@@ -58,72 +63,73 @@
             </li>
         </ul>
         <!--Примеры работ портфолио-->
-        <h2 class="nav-examples-title">Навигация по фотопримерам работ</h2>
+        <h2 class="nav-examples-title visually-hidden">Навигация по фотопримерам работ</h2>
         <ul class="list nav-examples-list">
             <li class="nav-examples-item">
                 <a class="link" href="">
-                    <img src="./images/portfolio1.jpg" alt="Экран ноутбука" width="370">
+                    <img class="nav-examples-item-image" src="./images/portfolio1.jpg" alt="Экран ноутбука" width="370">
                     <h3 class="nav-examples-item-title">Технокряк</h3>
                     <p class="nav-examples-item-text">Веб-сайт</p>
                 </a>                
             </li>
             <li class="nav-examples-item">
                 <a class="link" href="">
-                    <img src="./images/portfolio2.jpg" alt="Баскетболисты" width="370">
+                    <img class="nav-examples-item-image" src="./images/portfolio2.jpg" alt="Баскетболисты" width="370">
                     <h3 class="nav-examples-item-title">Постер New Orlean vs Golden Star</h3>
                     <p class="nav-examples-item-text">Дизайн</p>
                 </a>                
             </li>
             <li class="nav-examples-item">
                 <a class="link" href="">
-                    <img src="./images/portfolio3.jpg" alt="Логотип ресторана" width="370">
+                    <img class="nav-examples-item-image" src="./images/portfolio3.jpg" alt="Логотип ресторана" width="370">
                     <h3 class="nav-examples-item-title">Ресторан Seafood</h3>
                     <p class="nav-examples-item-text">Приложение</p>
                 </a>                
             </li>
             <li class="nav-examples-item">
                 <a class="link" href="">
-                    <img src="./images/portfolio4.jpg" alt="Наушники" width="370">
+                    <img class="nav-examples-item-image" src="./images/portfolio4.jpg" alt="Наушники" width="370">
                     <h3 class="nav-examples-item-title">Проект Prime</h3>
                     <p class="nav-examples-item-text">Маркетинг</p>
                 </a>                
             </li>
             <li class="nav-examples-item">
                 <a class="link" href="">
-                    <img src="./images/portfolio5.jpg" alt="Коробки" width="370">
+                    <img class="nav-examples-item-image" src="./images/portfolio5.jpg" alt="Коробки" width="370">
                     <h3 class="nav-examples-item-title">Проект Boxes</h3>
                     <p class="nav-examples-item-text">Приложение</p>
                 </a>
             </li>
             <li class="nav-examples-item">
                 <a href="">
-                    <img src="./images/portfolio6.jpg" alt="Экран мионитора" width="370">
+                    <img class="nav-examples-item-image" src="./images/portfolio6.jpg" alt="Экран мионитора" width="370">
                     <h3 class="nav-examples-item-title">Inspiration has no Borders</h3>
                     <p class="nav-examples-item-text">Веб-сайт</p>
                 </a>                
             </li>
             <li class="nav-examples-item">
                 <a class="link" href="">
-                    <img src="./images/portfolio7.jpg" alt="Раскрытая книга" width="370">
+                    <img class="nav-examples-item-image" src="./images/portfolio7.jpg" alt="Раскрытая книга" width="370">
                     <h3 class="nav-examples-item-title">Издание Limited Edition</h3>
                     <p class="nav-examples-item-text">Дизайн</p>
                 </a>                
             </li>
             <li class="nav-examples-item">
                 <a class="link" href="">
-                    <img src="./images/portfolio8.jpg" alt="Ярлык" width="370">
+                    <img class="nav-examples-item-image" src="./images/portfolio8.jpg" alt="Ярлык" width="370">
                     <h3 class="nav-examples-item-title">Проект LAB</h3>
                     <p class="nav-examples-item-text">Маркетинг</p>
                 </a>                
             </li>
             <li class="nav-examples-item">
                 <a class="link" href="">
-                    <img src="./images/portfolio9.jpg" alt="Фото ноутбука" width="370">
+                    <img class="nav-examples-item-image" src="./images/portfolio9.jpg" alt="Фото ноутбука" width="370">
                     <h3 class="nav-examples-item-title">Growing Business</h3>
                     <p class="nav-examples-item-text">Приложение</p>
                 </a>
             </li>
         </ul>
+        </div>
     </section>
     
     </main>
@@ -131,6 +137,7 @@
     <!--Подвал-->
     <footer class="footer">
         <!--Логотип-->
+        <div class="container">
         <a class="link footer-logo" href=""><span class="web">Web</span>Studio</a>
         <address>
             <ul class="list footer-list">
@@ -140,6 +147,7 @@
                 <li><a class="link footer-tel" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
+        </div>
     </footer>
 
 </body>
