--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <nav class="header-nav">
                 <a class="link header-logo" href=""><span class="web">Web</span>Studio</a>
                 <ul class="list header-list">
-                    <li><a class="link header-item current" href="">Студия</a></li>
-                    <li><a class="link header-item" href="./portfolio.html">Портфолио</a></li>
-                    <li><a class="link header-item" href="">Контакты</a></li>
+                    <li class="header-list-container"><a class="link header-item current" href="">Студия</a></li>
+                    <li class="header-list-container"><a class="link header-item" href="./portfolio.html">Портфолио</a></li>
+                    <li class="header-list-container"><a class="link header-item" href="">Контакты</a></li>
                 </ul>
             </nav>
 
@@ -76,7 +76,7 @@
         <!--Чем мы занимаемся-->
         <section class="works">
             <div class="container">
-            <h2 class="works-tile">Чем мы занимаемся</h2>
+            <h2 class="works-title">Чем мы занимаемся</h2>
             <ul class="list works-list">
                 <li class="works-item">
                     <img src="./images/box1.jpg" alt="Руки на клавиатуре и рядом алгоритм" width="370">
@@ -97,24 +97,32 @@
             <h2 class="team-title">Наша команда</h2>
             <ul class="list team-list">
                 <li class="team-item">
-                    <img class="team-item-image" src="./images/person1.jpg" alt="Игорь Демьяненко" width="270">
-                    <h3 class="team-item-title">Игорь Демьяненко</h3>
-                    <p class="team-item-text" lang="en">Product Designer</p>
+                    <div class="team-item-container">
+                        <img class="team-item-image" src="./images/person1.jpg" alt="Игорь Демьяненко" width="270">
+                        <h3 class="team-item-title">Игорь Демьяненко</h3>
+                        <p class="team-item-text" lang="en">Product Designer</p>
+                    </div>
                 </li>
-                <li>
-                    <img class="team-item-image" src="./images/person2.jpg" alt="Ольга Репина" width="270">
-                    <h3 class="team-item-title">Ольга Репина</h3>
-                    <p class="team-item-text" lang="en">Frontend Developer</p>
+                <li class="team-item">
+                    <div class="team-item-container">
+                        <img class="team-item-image" src="./images/person2.jpg" alt="Ольга Репина" width="270">
+                        <h3 class="team-item-title">Ольга Репина</h3>
+                        <p class="team-item-text" lang="en">Frontend Developer</p>
+                    </div>
                 </li>
-                <li>
-                    <img class="team-item-image" src="./images/person3.jpg" alt="Николай Тарасов" width="270">
-                    <h3 class="team-item-title">Николай Тарасов</h3>
-                    <p class="team-item-text" lang="en">Marketing</p>
+                <li class="team-item">
+                    <div class="team-item-container">
+                        <img class="team-item-image" src="./images/person3.jpg" alt="Николай Тарасов" width="270">
+                        <h3 class="team-item-title">Николай Тарасов</h3>
+                        <p class="team-item-text" lang="en">Marketing</p>
+                    </div>
                 </li>
-                <li>
-                    <img class="team-item-image" src="./images/person4.jpg" alt="Михаил Ермаков" width="270">
-                    <h3 class="team-item-title">Михаил Ермаков</h3>
-                    <p class="team-item-text" lang="en">UI Designer</p>
+                <li class="team-item">
+                    <div class="team-item-container">
+                        <img class="team-item-image" src="./images/person4.jpg" alt="Михаил Ермаков" width="270">
+                        <h3 class="team-item-title">Михаил Ермаков</h3>
+                        <p class="team-item-text" lang="en">UI Designer</p>
+                    </div>
                 </li>
             </ul>
             </div>
@@ -126,13 +134,13 @@
         <!--Логотип-->
         <div class="container">
         <a class="link footer-logo" href=""><span class="web">Web</span>Studio</a>
-         <address>
+        <address>
             <ul class="list footer-list">
                 <li><a class="link footer-map" href="https://goo.gl/maps/VZW6j8tTsUU3PeiP6" target="_blank" rel="noopner norefferer">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a class="link footer-mail" href="mailto:info@example.com">info@example.com</a></li>
                 <li><a class="link footer-tel" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>             
-         </address>
+        </address>
         </div>
     </footer>
     
