--- a/portfolio.html
+++ b/portfolio.html
@@ -19,13 +19,13 @@
     <!--Шапка сайта-->
     <header class="header">
         <!--Навигация на другие страницы-->
-        <div class="container">
+        <div class="container header-container">
         <nav class="header-nav">
             <a class="link header-logo" href=""><span class="web">Web</span>Studio</a>
             <ul class="list header-list">
-                <li><a class="link header-item" href="./index.html">Студия</a></li>
-                <li><a class="link header-item current" href="">Портфолио</a></li>
-                <li><a class="link header-item" href="">Контакты</a></li>
+                <li class="header-list-container"><a class="link header-item" href="./index.html">Студия</a></li>
+                <li class="header-list-container"><a class="link header-item current" href="">Портфолио</a></li>
+                <li class="header-list-container"><a class="link header-item" href="">Контакты</a></li>
             </ul>
         </nav>
     
@@ -43,7 +43,7 @@
     <!--Навигация по портфолио-->
     <section class="nav-portfolio">
         <div class="container">
-        <h1 class="nav-portfolio-title visually-hidden">Навигация кнопоками примеров работ</h2>
+        <h1 class="nav-portfolio-title visually-hidden">Навигация кнопоками примеров работ</h1>
         <!--Кнопки-->
         <ul class="list nav-portfolio-list">
             <li class="nav-portfolio-item">
@@ -66,67 +66,103 @@
         <h2 class="nav-examples-title visually-hidden">Навигация по фотопримерам работ</h2>
         <ul class="list nav-examples-list">
             <li class="nav-examples-item">
-                <a class="link" href="">
+                <div class="nav-examples-item-container">
+                    <a class="link" href="">
                     <img class="nav-examples-item-image" src="./images/portfolio1.jpg" alt="Экран ноутбука" width="370">
-                    <h3 class="nav-examples-item-title">Технокряк</h3>
-                    <p class="nav-examples-item-text">Веб-сайт</p>
-                </a>                
+                        <div class="nav-examples-container">
+                            <h3 class="nav-examples-item-title">Технокряк</h3>
+                            <p class="nav-examples-item-text">Веб-сайт</p>
+                        </div>
+                    </a> 
+                </div>
             </li>
             <li class="nav-examples-item">
-                <a class="link" href="">
+                <div class="nav-examples-item-container">
+                    <a class="link" href="">
                     <img class="nav-examples-item-image" src="./images/portfolio2.jpg" alt="Баскетболисты" width="370">
-                    <h3 class="nav-examples-item-title">Постер New Orlean vs Golden Star</h3>
-                    <p class="nav-examples-item-text">Дизайн</p>
-                </a>                
+                        <div class="nav-examples-container">
+                            <h3 class="nav-examples-item-title">Постер New Orlean vs Golden Star</h3>
+                            <p class="nav-examples-item-text">Дизайн</p>
+                        </div>
+                    </a> 
+                </div>
             </li>
             <li class="nav-examples-item">
-                <a class="link" href="">
+                <div class="nav-examples-item-container">
+                    <a class="link" href="">
                     <img class="nav-examples-item-image" src="./images/portfolio3.jpg" alt="Логотип ресторана" width="370">
-                    <h3 class="nav-examples-item-title">Ресторан Seafood</h3>
-                    <p class="nav-examples-item-text">Приложение</p>
-                </a>                
+                        <div class="nav-examples-container">
+                            <h3 class="nav-examples-item-title">Ресторан Seafood</h3>
+                            <p class="nav-examples-item-text">Приложение</p>
+                        </div>
+                    </a>
+                </div>
             </li>
             <li class="nav-examples-item">
-                <a class="link" href="">
+                <div class="nav-examples-item-container">
+                    <a class="link" href="">
                     <img class="nav-examples-item-image" src="./images/portfolio4.jpg" alt="Наушники" width="370">
-                    <h3 class="nav-examples-item-title">Проект Prime</h3>
-                    <p class="nav-examples-item-text">Маркетинг</p>
-                </a>                
+                        <div class="nav-examples-container">
+                            <h3 class="nav-examples-item-title">Проект Prime</h3>
+                            <p class="nav-examples-item-text">Маркетинг</p>
+                        </div>
+                    </a> 
+                </div>
             </li>
             <li class="nav-examples-item">
-                <a class="link" href="">
+                <div class="nav-examples-item-container">
+                    <a class="link" href="">
                     <img class="nav-examples-item-image" src="./images/portfolio5.jpg" alt="Коробки" width="370">
-                    <h3 class="nav-examples-item-title">Проект Boxes</h3>
-                    <p class="nav-examples-item-text">Приложение</p>
-                </a>
+                        <div class="nav-examples-container">
+                            <h3 class="nav-examples-item-title">Проект Boxes</h3>
+                            <p class="nav-examples-item-text">Приложение</p>
+                        </div>
+                    </a>
+                </div>
             </li>
             <li class="nav-examples-item">
-                <a href="">
+                <div class="nav-examples-item-container">
+                    <a class="link" href="">
                     <img class="nav-examples-item-image" src="./images/portfolio6.jpg" alt="Экран мионитора" width="370">
-                    <h3 class="nav-examples-item-title">Inspiration has no Borders</h3>
-                    <p class="nav-examples-item-text">Веб-сайт</p>
-                </a>                
+                        <div class="nav-examples-container">
+                            <h3 class="nav-examples-item-title">Inspiration has no Borders</h3>
+                            <p class="nav-examples-item-text">Веб-сайт</p>
+                        </div>
+                    </a> 
+                </div>
             </li>
             <li class="nav-examples-item">
-                <a class="link" href="">
+                <div class="nav-examples-item-container">
+                    <a class="link" href="">
                     <img class="nav-examples-item-image" src="./images/portfolio7.jpg" alt="Раскрытая книга" width="370">
-                    <h3 class="nav-examples-item-title">Издание Limited Edition</h3>
-                    <p class="nav-examples-item-text">Дизайн</p>
-                </a>                
+                        <div class="nav-examples-container">
+                            <h3 class="nav-examples-item-title">Издание Limited Edition</h3>
+                            <p class="nav-examples-item-text">Дизайн</p>
+                        </div>
+                    </a>  
+                </div>
             </li>
             <li class="nav-examples-item">
-                <a class="link" href="">
+                <div class="nav-examples-item-container">
+                    <a class="link" href="">
                     <img class="nav-examples-item-image" src="./images/portfolio8.jpg" alt="Ярлык" width="370">
-                    <h3 class="nav-examples-item-title">Проект LAB</h3>
-                    <p class="nav-examples-item-text">Маркетинг</p>
-                </a>                
+                        <div class="nav-examples-container">
+                            <h3 class="nav-examples-item-title">Проект LAB</h3>
+                            <p class="nav-examples-item-text">Маркетинг</p>
+                        </div>
+                    </a> 
+                </div>
             </li>
             <li class="nav-examples-item">
-                <a class="link" href="">
+                <div class="nav-examples-item-container">
+                    <a class="link" href="">
                     <img class="nav-examples-item-image" src="./images/portfolio9.jpg" alt="Фото ноутбука" width="370">
-                    <h3 class="nav-examples-item-title">Growing Business</h3>
-                    <p class="nav-examples-item-text">Приложение</p>
-                </a>
+                        <div class="nav-examples-container">
+                            <h3 class="nav-examples-item-title">Growing Business</h3>
+                            <p class="nav-examples-item-text">Приложение</p>
+                        </div>
+                    </a>
+                </div>
             </li>
         </ul>
         </div>
