--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,8 @@
             <nav class="header-nav">
                 <a class="link header-logo" href=""><span class="web">Web</span>Studio</a>
                 <ul class="list header-list">
-                    <li class="header-list-container"><a class="link header-item current" href="">Студия</a></li>
-                    <li class="header-list-container"><a class="link header-item" href="./portfolio.html">Портфолио</a></li>
+                    <li class="header-list-container"><a class="link header-item " href="./index.html">Студия</a></li>
+                    <li class="header-list-container"><a class="link header-item current" href="">Портфолио</a></li>
                     <li class="header-list-container"><a class="link header-item" href="">Контакты</a></li>
                 </ul>
             </nav>
